src/snapshots/treetop_core__engine__tests__evaluate__test_create_host_requests__alice_create_host_wrong_name_deny.snap
---
source: src/engine/tests/evaluate.rs
expression: decision
---
{
  "Deny": {
    "version": {
      "hash": "fb81c2dc092d8f992659f666106894bb0cde22932f2ee2a819b4d8cbc81bfc94",
      "loaded_at": "[timestamp]",
      "label_set": null,
      "generation": 1
    }
  }
}
